# e310x-hal

./: Cargo.toml
src/: clock.rs  delay.rs  device.rs  gpio.rs  i2c.rs  interrupt.rs  pmu.rs  pwm.rs  rtc.rs  serial.rs  wdog.rs
src/core/: mod.rs  plic.rs
src/spi/: bus.rs  shared_bus.rs  traits.rs
