[package]
name = "e310x-hal"
version = "0.11.0"
authors = ["David Craven <david@craven.ch>"]
repository = "https://github.com/riscv-rust/e310x-hal"
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the E310x family of microcontrollers."
keywords = ["riscv", "e310", "hal"]
license = "ISC"
edition = "2018"
rust-version = "1.59"

[dependencies]
embedded-hal = { version = "0.2.6", features = ["unproven"] }
nb = "1.0.0"
atomic-polyfill = "1.0.2"
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
e310x = { git = "https://github.com/greenlsi/e310x.git", branch = "master", features = ["rt", "critical-section"] }
# e310x = { path = "../greenlsi_e310x", features = ["rt", "critical-section"] }

[features]
g002 = ["e310x/g002"]
v-extern = ["e310x/v-extern"]

[package.metadata.docs.rs]
features = ["g002", "v-extern"]
