[package]
name = "e310x-hal"
version = "0.11.0"
authors = ["David Craven <david@craven.ch>"]
repository = "https://github.com/riscv-rust/e310x-hal"
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the E310x family of microcontrollers."
keywords = ["riscv", "e310", "hal"]
license = "ISC"
edition = "2021"
rust-version = "1.61"

[dependencies]
embedded-hal = { version = "0.2.6", features = ["unproven"] }
nb = "1.0.0"
riscv = "0.12.0"
e310x = { git = "https://github.com/greenlsi/e310x.git", branch = "new-svd", features = ["rt", "critical-section"] } # TODO use crates.io

[target.'cfg(not(target_has_atomic = "32"))'.dependencies]
portable-atomic = { version = "1.4", default-features = false, features = ["unsafe-assume-single-core"] }

[features]
g002 = ["e310x/g002"]
v-trap = ["e310x/v-trap"]

[package.metadata.docs.rs]
features = ["g002"]
